--- a/ui/package.json
+++ b/ui/package.json
@@ -7,7 +7,9 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-table": "^6.10.3",
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "start": "PORT=3006 react-scripts start",
